# SteganoFS

./: .gitignore  CMakeLists.txt  Doxyfile  HiddenCluster.c  HiddenCluster.h  HiddenFile.c  HiddenFile.h  README.md  SteganoFsAdapter.cpp  SteganoFsAdapter.h  bsfat.c  bsfat.h  hiddenFat.c  hiddenFat.h  hiddencluster.c  hiddencluster.h  hiddenfat.c  hiddenfat.h  hiddenfile.c  hiddenfile.h  main.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ramdiskloader.c  ramdiskloader.h  res.qrc  steganoFS.c  steganoFS.h  steganofs.c  steganofs.h  tests.c
.github/workflows/: c-cpp.yml  testsuit.yml
assets/stylesheet/: Webmas.qss
cli/: CMakeLists.txt  steganocli.cpp  steganocli.h
cpp-wrapper/: SteganoFsAdapter.cpp  SteganoFsAdapter.h
docs/: architecture.md  compatibility.md  disclaimer_credits_graphics.md  doxygen.md  gui_pluto_explorer.md  install.md  known_issues.md  stegano_providers_interface.md  tests.md  usage.md
doxygen/c/: Doxyfile  doxygen.md  hiddencluster.md  hiddenfat.md  hiddenfile.md  ramdiskloader.md  runlengthencoding.md  stegano_file.md  stegano_provider.md  steganofs.md
doxygen/c/xml/: Doxyfile.xml  dir_4760e09f6a83cc8ddfc2af2d6fdddeee.xml  dir_8717b148848d745312d0736022ef0e06.xml  group__hiddencluster.xml  group__hiddenfat.xml  group__hiddenfile.xml  group__ramdiskloader.xml  group__runlengthencoding.xml  group__steg__functions.xml  group__stegano__file.xml  group__stegano__provider.xml  group__steganofs.xml  hiddencluster_8h.xml  hiddenfat_8h.xml  hiddenfile_8h.xml  index.xml  ramdiskloader_8h.xml  runlengthencoding_8h.xml  stegano__file_8h.xml  stegano__provider_8h.xml  steganofs_8h.xml  structHiddenCluster.xml  structHiddenFat.xml  structHiddenFile.xml  structSerializedFilesystem.xml  structSteganoFile.xml  structSteganoProvider.xml
doxygen/cpp/: Doxyfile  doxygen.md
doxygen/cpp/xml/: Doxyfile.xml  SteganoFsAdapter_8h.xml  classDefragmentDialog.xml  classFormatFileSystemDialog.xml  classFragmentTile.xml  classFragmentationDiagram.xml  classFragmentationDialog.xml  classMainWindow.xml  classMountFromPathDialog.xml  classPreviewGraphicsView.xml  classShowFileSystemInfoDialog.xml  classSteganoFsAdapter.xml  classWorker.xml  defragmentdialog_8h.xml  dir_7bbe9c02e80dab039aff9217e335108f.xml  dir_c56b81238196041958e27e80ad8786a6.xml  formatfilesystemdialog_8h.xml  fragmentationdiagram_8h.xml  fragmentationdialog_8h.xml  fragmenttile_8h.xml  index.xml  mainwindow_8h.xml  mountfrompathdialog_8h.xml  namespaceSteganoFS.xml  namespaceUi.xml  previewgraphicsview_8h.xml  showfilesysteminfodialog_8h.xml  worker_8h.xml
stegano_gui/: CMakeLists.txt  createramdiskdialog.cpp  createramdiskdialog.h  createramdiskdialog.ui  defragmentdialog.cpp  defragmentdialog.h  defragmentdialog.ui  example.cpp  example.h  formatfilesystemdialog.cpp  formatfilesystemdialog.h  formatfilesystemdialog.ui  fragmentationdiagram.cpp  fragmentationdiagram.h  fragmentationdiagram.ui  fragmentationdialog.cpp  fragmentationdialog.h  fragmentationdialog.ui  fragmenttile.cpp  fragmenttile.h  fragmenttile.ui  loadfilesystemdialog.cpp  loadfilesystemdialog.h  loadfilesystemdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mountfrompathdialog.cpp  mountfrompathdialog.h  mountfrompathdialog.ui  previewgraphicsview.cpp  previewgraphicsview.h  res.qrc  showfilesysteminfodialog.cpp  showfilesysteminfodialog.h  showfilesysteminfodialog.ui  worker.cpp  worker.h
stegano_gui/assets/stylesheet/: Darkeum.qss  Darkeum_light.qss
stegano_providers/: filetype.h  stegano_file.h  stegano_provider.c  stegano_provider.h
stegano_providers/bmp/: bmp_file.h  bmp_provider.c  bmp_provider.h  render.cpp
stegano_providers/raw/: raw_provider.c  raw_provider.h
steganofs/: CMakeLists.txt  hiddencluster.c  hiddencluster.h  hiddenfat.c  hiddenfat.h  hiddenfile.c  hiddenfile.h  ramdiskloader.c  ramdiskloader.h  runlengthencoding.c  runlengthencoding.h  steganofs.c  steganofs.h  tests.c
steganofs/stegano_providers/: stegano_file.h  stegano_provider.c  stegano_provider.h
steganofs/stegano_providers/bmp/: bmp_provider.c  bmp_provider.h
steganofs/stegano_providers/raw/: raw_provider.c  raw_provider.h
tests/: CMakeLists.txt  test_bmp_provider_test_bmp_folder.c  test_bmp_provider_test_format_bmp_folder.c  test_bmp_provider_test_generic_buffer.c  test_bmp_provider_test_single_bmp_file.c  test_cpp_wrapper_test_defragmenting.cpp  test_stegano_test_create_file_insufficient_memory.c  test_stegano_test_create_file_no_available_file_slot.c  test_stegano_test_create_file_valid.c  test_stegano_test_create_hidden_fat.c  test_stegano_test_defragmentation.c  test_stegano_test_delete_file_non_existent.c  test_stegano_test_delete_file_with_clusters.c  test_stegano_test_fuse.c  test_stegano_test_get_free_disk_space_empty_fat.c  test_stegano_test_get_free_disk_space_full_disk.c  test_stegano_test_get_free_disk_space_with_allocated_blocks.c  test_stegano_test_ramdiskloader.c  test_stegano_test_rle.c  test_stegano_test_show_n_block_fat.c  test_stegano_test_swap_hidden_clusters_integrity.c  test_stegano_test_write_read.c  test_steganofs_test_create_file_linked_list.c  test_steganofs_test_delete_file_valid.c
tests/test_bmp_provider/: CMakeLists.txt  test_bmp_provider.c
tests/test_cpp_wrapper/: CMakeLists.txt  test_cpp_wrapper.cpp
tests/test_steganofs/: CMakeLists.txt  test_steganofs.c
tools/: convert_to_bmp3.sh
