cmake_minimum_required(VERSION 3.5)
project(tests C)

set(CMAKE_C_STANDARD 99)

add_executable(test_bmp_provider_test_bmp_folder test_bmp_provider_test_bmp_folder.c)
target_link_libraries(test_bmp_provider_test_bmp_folder PRIVATE steganofs)

add_executable(test_bmp_provider_test_format_bmp_folder test_bmp_provider_test_format_bmp_folder.c)
target_link_libraries(test_bmp_provider_test_format_bmp_folder PRIVATE steganofs)

add_executable(test_bmp_provider_test_generic_buffer test_bmp_provider_test_generic_buffer.c)
target_link_libraries(test_bmp_provider_test_generic_buffer PRIVATE steganofs)

add_executable(test_bmp_provider_test_single_bmp_file test_bmp_provider_test_single_bmp_file.c)
target_link_libraries(test_bmp_provider_test_single_bmp_file PRIVATE steganofs)

add_executable(test_steganofs_test_create_file_linked_list test_steganofs_test_create_file_linked_list.c)
target_link_libraries(test_steganofs_test_create_file_linked_list PRIVATE steganofs)

add_executable(test_steganofs_test_delete_file_valid test_steganofs_test_delete_file_valid.c)
target_link_libraries(test_steganofs_test_delete_file_valid PRIVATE steganofs)

add_executable(test_stegano_test_create_file_insufficient_memory test_stegano_test_create_file_insufficient_memory.c)
target_link_libraries(test_stegano_test_create_file_insufficient_memory PRIVATE steganofs)

add_executable(test_stegano_test_create_file_no_available_file_slot test_stegano_test_create_file_no_available_file_slot.c)
target_link_libraries(test_stegano_test_create_file_no_available_file_slot PRIVATE steganofs)

add_executable(test_stegano_test_create_file_valid test_stegano_test_create_file_valid.c)
target_link_libraries(test_stegano_test_create_file_valid PRIVATE steganofs)

add_executable(test_stegano_test_create_hidden_fat test_stegano_test_create_hidden_fat.c)
target_link_libraries(test_stegano_test_create_hidden_fat PRIVATE steganofs)

add_executable(test_stegano_test_defragmentation test_stegano_test_defragmentation.c)
target_link_libraries(test_stegano_test_defragmentation PRIVATE steganofs)

add_executable(test_stegano_test_delete_file_non_existent test_stegano_test_delete_file_non_existent.c)
target_link_libraries(test_stegano_test_delete_file_non_existent PRIVATE steganofs)

add_executable(test_stegano_test_delete_file_with_clusters test_stegano_test_delete_file_with_clusters.c)
target_link_libraries(test_stegano_test_delete_file_with_clusters PRIVATE steganofs)

#add_executable(test_stegano_test_fuse test_stegano_test_fuse.c)
#target_link_libraries(test_stegano_test_fuse PRIVATE steganofs)
#
add_executable(test_stegano_test_get_free_disk_space_empty_fat test_stegano_test_get_free_disk_space_empty_fat.c)
target_link_libraries(test_stegano_test_get_free_disk_space_empty_fat PRIVATE steganofs)

add_executable(test_stegano_test_get_free_disk_space_full_disk test_stegano_test_get_free_disk_space_full_disk.c)
target_link_libraries(test_stegano_test_get_free_disk_space_full_disk PRIVATE steganofs)

add_executable(test_stegano_test_get_free_disk_space_with_allocated_blocks test_stegano_test_get_free_disk_space_with_allocated_blocks.c)
target_link_libraries(test_stegano_test_get_free_disk_space_with_allocated_blocks PRIVATE steganofs)

add_executable(test_stegano_test_ramdiskloader test_stegano_test_ramdiskloader.c)
target_link_libraries(test_stegano_test_ramdiskloader PRIVATE steganofs)

add_executable(test_stegano_test_rle test_stegano_test_rle.c)
target_link_libraries(test_stegano_test_rle PRIVATE steganofs)

add_executable(test_stegano_test_show_n_block_fat test_stegano_test_show_n_block_fat.c)
target_link_libraries(test_stegano_test_show_n_block_fat PRIVATE steganofs)

add_executable(test_stegano_test_swap_hidden_clusters_integrity test_stegano_test_swap_hidden_clusters_integrity.c)
target_link_libraries(test_stegano_test_swap_hidden_clusters_integrity PRIVATE steganofs)

add_executable(test_stegano_test_write_read test_stegano_test_write_read.c)
target_link_libraries(test_stegano_test_write_read PRIVATE steganofs)


add_custom_target(copy_example_bmp
        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/example.bmp ${CMAKE_CURRENT_BINARY_DIR}
)
add_custom_target(copy_example_steganofs
        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/example.steganofs ${CMAKE_CURRENT_BINARY_DIR}
)
add_dependencies(test_bmp_provider_test_single_bmp_file copy_example_bmp)
add_dependencies(test_bmp_provider_test_format_bmp_folder copy_example_folder)
add_dependencies(test_bmp_provider_test_bmp_folder test_bmp_provider_test_bmp_folder)


set(CMAKE_CXX_STANDARD 17)
add_executable(test_cpp_wrapper_test_defragmenting test_cpp_wrapper_test_defragmenting.cpp
        ../cpp-wrapper/SteganoFsAdapter.cpp
        ../cpp-wrapper/SteganoFsAdapter.h)
target_link_libraries(test_cpp_wrapper_test_defragmenting PRIVATE steganofs)

add_dependencies(test_cpp_wrapper_test_defragmenting copy_example_steganofs)
